# resilience-core

./: .zenodo.json  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml
.github/workflows/: diamond-validation.yml
src/resilience_core/: __init__.py  cascade.py  constants.py  coupling.py  eigenrate.py  frame_principle.py  rho_calculator.py  system.py
src/resilience_core/benchmarks/: __init__.py  amoc_calibration.py  arctic_calibration.py  sandpile_calibration.py
tests/: test_coupling.py  test_diamond.py  test_eigenrate.py  test_frame_principle.py  test_rho.py
