[project]
name = "resilience-core"
version = "1.0.0"
description = "Domänenübergreifende Systemresilienzgröße Ρ — UTAC fixpoint eigenrate + inter-domain coupling (GenesisAeon P40)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Römer, Johann", email = "joberoemer@gmail.com" }]
requires-python = ">=3.11"
keywords = [
    "resilience",
    "UTAC",
    "CREP",
    "tipping-points",
    "GenesisAeon",
    "complex-systems",
    "eigenrate",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.26",
    "diamond-setup>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "matplotlib>=3.8.0",
]

[project.urls]
Homepage = "https://github.com/GenesisAeon/resilience-core"
Repository = "https://github.com/GenesisAeon/resilience-core"
Issues = "https://github.com/GenesisAeon/resilience-core/issues"
Zenodo = "https://doi.org/10.5281/zenodo.XXXXXXX"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/resilience_core"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "W", "UP", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=resilience_core --cov-report=term-missing -v"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
ignore_missing_imports = true
